:pencil: modify urls

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <div class="col_3 omega">
                 <i class="fas fa-tachometer-alt fa-3x"></i>
 				<br>
-                <br/><a title = "show the performance test results" style="cursor:pointer; color: #fff" onclick="javascript:window.location.href='https://github.com/auditable-credential/auditable-credential-core/tree/master/test/result'"> High efficiency </a>
+                <br/><a title = "show the performance test results" style="cursor:pointer; color: #fff" onclick="javascript:window.location.href='https://github.com/typex-1/auditable-credential-core/tree/master/test/result'"> High efficiency </a>
             </div>
             <div class="clear"></div>
             <br />
-            <a class="button red large" href="https://github.com/auditable-credential/auditable-credential-core#workflow"><i class="fab fa-whmcs"></i> How it works </a>
+            <a class="button red large" href="https://github.com/typex-1/auditable-credential-core#workflow"><i class="fab fa-whmcs"></i> How it works </a>
             <span style="white-space: nowrap;">
 		<a class="button blue large" href="" ><i class="fa fa-newspaper"> Paper</i></a>
 		<a class="button blue large" href="mailto:"><i class="fa fa-envelope"></i> Email</a></span>
@@ -125,10 +125,10 @@ function identity_calculating(uint256 zeta1_x, uint256 zeta1_y) public{
                 <ul class="alt">
                     <li>
                         <button class="medium green" onclick="javascript:window.location.href='#'"><i class="fa fa-play-circle" ></i> Prototype &nbsp; </button>
-                        <button class="medium green" onclick="javascript:window.location.href='https://github.com/auditable-credential/auditable-credential-core'"><i class="fab fa-github"></i> Github &nbsp; </button>
+                        <button class="medium green" onclick="javascript:window.location.href='https://github.com/typex-1/auditable-credential-core'"><i class="fab fa-github"></i> Github &nbsp; </button>
                     </li>
                     <li>
-                        <button class="medium blue" onclick="javascript:window.location.href='https://auditable-credential.github.io/auditable-credential-documentation'" ><i class="fa fa-star"></i> Interactive Tutorial & Demo </button>
+                        <button class="medium blue" onclick="javascript:window.location.href='https://typex-1.github.io/auditable-credential-documentation/'" ><i class="fa fa-star"></i> Interactive Tutorial & Demo </button>
                     </li>
                 </ul>
             </div>
@@ -165,10 +165,10 @@ function identity_calculating(uint zeta1) public{
                 <ul class="alt">
                     <li>
                         <button class="medium green" onclick="javascript:window.location.href='#'"><i class="fa fa-play-circle" ></i> Prototype &nbsp;</button>
-                        <button class="medium green" onclick="javascript:window.location.href='https://github.com/auditable-credential/auditable-credential-core'"><i class="fab fa-github"></i> Github &nbsp;</button>
+                        <button class="medium green" onclick="javascript:window.location.href='https://github.com/typex-1/auditable-credential-core'"><i class="fab fa-github"></i> Github &nbsp;</button>
                     </li>
                     <li>
-                        <button class="medium blue" onclick="javascript:window.location.href='https://auditable-credential.github.io/auditable-credential-documentation'" ><i class="fa fa-star"></i> Interactive Tutorial & Demo</button>
+                        <button class="medium blue" onclick="javascript:window.location.href='https://typex-1.github.io/auditable-credential-documentation/'" ><i class="fa fa-star"></i> Interactive Tutorial & Demo</button>
                     </li>
                 </ul>
             </div>
